Added ztp shortcut

--- a/www/index.html
+++ b/www/index.html
@@ -56,8 +56,9 @@
     <h1>µONOS ZTP Demo</h1>
     <a href="javascript:exec('add-leaves')" class="button">Add Edge-Core Wedge 65 Peer Leaves</a>
     <a href="javascript:exec('add-spine')" class="button">Add Edge-Core Wedge 32 Spine</a>
-    <a href="javascript:exec('set-wedge-65-roles leaf')" class="button">Change Wedge 65 Peers to Leaves</a>
-    <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65 Leaves to Hybrid</a>
+    <a href="javascript:exec('set-wedge-65-roles leaf')" class="button">Change Wedge 65s to Leaves</a>
+    <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65s to Hybrid Leaves</a>
+    <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65s to Peers</a>
 </div>
 </body>
 </html>
