--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
     <a href="javascript:exec('add-spine')" class="button">Add Edge-Core Wedge 32 Spine</a>
     <a href="javascript:exec('set-wedge-65-roles leaf')" class="button">Change Wedge 65s to Leaves</a>
     <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65s to Hybrid Leaves</a>
-    <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65s to Peers</a>
+    <a href="javascript:exec('set-wedge-65-roles peer')" class="button">Change Wedge 65s to Peers</a>
 </div>
 </body>
 </html>
