--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,8 @@
 <body>
 <div class="ui-content">
     <h1>µONOS ZTP Demo</h1>
+    <a href="javascript:exec('create-roles')" class="button">Create Roles</a>
+    <p/>
     <a href="javascript:exec('add-leaves')" class="button">Add Edge-Core Wedge 65 Peer Leaves</a>
     <a href="javascript:exec('add-spine')" class="button">Add Edge-Core Wedge 32 Spine</a>
     <a href="javascript:exec('set-wedge-65-roles leaf')" class="button">Change Wedge 65s to Leaves</a>
