Adding shortcut for multi-dev operation

--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,8 @@
     <a href="javascript:exec('set-wedge-65-roles leaf')" class="button">Change Wedge 65s to Leaves</a>
     <a href="javascript:exec('set-wedge-65-roles hybrid')" class="button">Change Wedge 65s to Hybrid Leaves</a>
     <a href="javascript:exec('set-wedge-65-roles peer')" class="button">Change Wedge 65s to Peers</a>
+    <p/>
+    <a href="javascript:exec('disable-if2-w1-w2-gnmi')" class="button">Disable 2/0 Ports on Wedge 65s</a>
 </div>
 </body>
 </html>
