--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="app.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
     <title>µONOS ZTP Demo</title>
 
     <style>
@@ -8,7 +12,7 @@
             background: #444;
             color: #aaa;
             font-family: Arial, Helvetica, Sans-Serif, serif;
-            font-size: 1.3em;
+            font-size: 18px;
         }
 
         .ui-content {
@@ -32,7 +36,16 @@
         }
 
         a.button:hover {
-            background-color: #1186FF;
+            background-color: #0066FF;
+        }
+
+        a.button:active {
+            background-color: darkorange;
+        }
+
+        img {
+            width: 96px;
+            height: 96px;
         }
 	</style>
 
@@ -41,8 +54,8 @@
 			var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function() {
 				if (this.readyState == 4) {
-					if (this.status != 200) {
-						alert('BOOM ' + this.status);
+					if (this.status == 200) {
+                        ;
 					}
 				}
 			};
