Adding rollback to the ZTP GUI

--- a/www/index.html
+++ b/www/index.html
@@ -76,6 +76,7 @@
     <a href="javascript:exec('set-wedge-65-roles peer')" class="button">Change Wedge 65s to Peers</a>
     <p/>
     <a href="javascript:exec('disable-if2-w1-w2-gnmi')" class="button">Disable 2/0 Ports on Wedge 65s</a>
+    <a href="javascript:exec('rollback-last-change')" class="button">Rollback Last Change</a>
     <p/>
     <a href="javascript:exec('reset-traffic')" class="button">Nudge Traffic Generator</a>
 </div>
