--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,8 @@
         a.button {
             width: 100%;
             display: inline-block;
-            padding: 0.3em 1.2em;
-            margin: 0 0.3em 0.3em 0;
+            padding: 0.6em 1.2em;
+            margin: 0 0.3em 0.9em 0;
             border-radius: 0.4em;
             box-sizing: border-box;
             text-decoration: none;
@@ -79,6 +79,11 @@
     <a href="javascript:exec('rollback-last-change')" class="button">Rollback Last Change</a>
     <p/>
     <a href="javascript:exec('reset-traffic')" class="button">Nudge Traffic Generator</a>
+    <p/>
+    <br>
+    <p/>
+    <a href="javascript:exec('reset-cluster')" class="button">Reset Cluster</a>
+    <a href="javascript:exec('reset-onos')" class="button">Reset ONOS</a>
 </div>
 </body>
 </html>
