--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,8 @@
 <body>
 <div class="ui-content">
     <h1>µONOS ZTP Demo</h1>
+    <a href="javascript:exec('kill-node')" class="button">Kill a Topology Node</a>
+    <a href="javascript:exec('add-ztp')" class="button">Deploy ZTP Application</a>
     <a href="javascript:exec('create-roles')" class="button">Create Roles</a>
     <p/>
     <a href="javascript:exec('add-leaves')" class="button">Add Edge-Core Wedge 65 Peer Leaves</a>
@@ -82,8 +84,9 @@
     <p/>
     <br>
     <p/>
-    <a href="javascript:exec('reset-cluster')" class="button">Reset Cluster</a>
     <a href="javascript:exec('reset-onos')" class="button">Reset ONOS</a>
+    <p/>
+    <a href="javascript:exec('reset-cluster')" class="button">Reset Cluster</a>
 </div>
 </body>
 </html>
